--- a/Tiles.csproj
+++ b/Tiles.csproj
@@ -52,21 +52,23 @@
     <Compile Include="Src\Player.cs" />
     <Compile Include="Src\Texture.cs" />
     <Compile Include="Src\Tiles\GrassTile.cs" />
-    <Compile Include="Src\Tiles\PathTile.cs" />
+    <Compile Include="Src\Tiles\DirtTile.cs" />
     <Compile Include="Src\Tiles\PlayerTile.cs" />
     <Compile Include="Src\Tiles\StoneTile.cs" />
     <Compile Include="Src\Tiles\Tile.cs" />
     <Compile Include="Src\Tiles\WaterTile.cs" />
     <Compile Include="Src\Util\Perlin.cs" />
     <Compile Include="Src\Util\Random.cs" />
-    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Assets\Tiles" />
+    <Content Include="Assets\Tiles\DirtTile.png" />
+    <Content Include="Assets\Tiles\GrassTile.png" />
+    <Content Include="Assets\Tiles\StoneTile.png" />
+    <Content Include="Assets\Tiles\WaterTile.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
