--- a/Tiles.csproj
+++ b/Tiles.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Src\Constants.cs" />
     <Compile Include="Src\Player.cs" />
+    <Compile Include="Src\PlayerTexture.cs" />
     <Compile Include="Src\Texture.cs" />
     <Compile Include="Src\Tiles\GrassTile.cs" />
     <Compile Include="Src\Tiles\DirtTile.cs" />
@@ -65,6 +66,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Player\Charecter.png" />
+    <Content Include="Assets\Player\Layer 1.png" />
+    <Content Include="Assets\Player\PlayerBack.png" />
+    <Content Include="Assets\Player\PlayerFront.png" />
+    <Content Include="Assets\Player\PlayerLeft.png" />
+    <Content Include="Assets\Player\PlayerRight.png" />
     <Content Include="Assets\Tiles\DirtTile.png" />
     <Content Include="Assets\Tiles\GrassTile.png" />
     <Content Include="Assets\Tiles\StoneTile.png" />
