--- a/Tiles.csproj
+++ b/Tiles.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Src\Chunk.cs" />
     <Compile Include="Src\Constants.cs" />
     <Compile Include="Src\Player.cs" />
     <Compile Include="Src\PlayerTexture.cs" />
