--- a/Tiles/packages.config
+++ b/Tiles/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Gwen" version="3.0.6001.172" targetFramework="net472" />
+  <package id="Gwen.Renderer.OpenTK" version="3.0.6001.430" targetFramework="net472" />
   <package id="LibNoise" version="0.2" targetFramework="net472" />
   <package id="OpenTK" version="3.0.1" targetFramework="net472" />
+  <package id="OpenTK.Next" version="1.1.1616.8959" targetFramework="net472" />
+  <package id="QuickFont.Desktop" version="4.0.6000.41401" targetFramework="net472" />
 </packages>
